Fix for issue (#1011)
Word and Character count buttons are triggering executeAction() method on click. This is fixed by removing pointer events on the div if they are disabled.

--- a/src/textAngular.css
+++ b/src/textAngular.css
@@ -39,6 +39,10 @@
 	padding: 6px 12px;
 }
 
+.ta-toolbar.btn-default[disabled] {
+    pointer-events: none;
+}
+
 .ta-editor:focus {
 	user-select: text;
 }
